Fix z-index on DatePicker

--- a/src/alto-ui/scss/variables.scss
+++ b/src/alto-ui/scss/variables.scss
@@ -273,6 +273,7 @@ $z-index-overlay: 9000 !default;
 $z-index-navbar: 7000 !default;
 $z-index-sidebar: 6000 !default;
 $z-index-dropdown: 5000 !default;
+$z-index-datepicker: 5000 !default;
 $z-index-dialog: 4000 !default;
 $z-index-popup: 3000 !default;
 $z-index-content: 1000 !default;
